2011-10-11  Jason Merrill  <jason@redhat.com>

	PR c++/49216
	* init.c (build_vec_init): Avoid crash on new int[1]{}.

	PR c++/49855
	PR c++/49896
	* call.c (perform_implicit_conversion_flags): Do perform
	scalar conversions in templates.
	* pt.c (tsubst_copy, tsubst_copy_and_build): Handle CONVERT_EXPR.

2011-10-11  Janis Johnson  <janisjo@codesourcery.com>

	PR c++/44473
	* mangle.c (write_type): Handle CV qualifiers for decimal classes.

2011-10-11  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/50611
	* pt.c (tsubst_copy_and_build): If (complain & tf_error) is false
	do not call unqualified_name_lookup_error.

2011-10-09  Jakub Jelinek  <jakub@redhat.com>
	    Diego Novillo  <dnovillo@google.com>

	* pt.c (reregister_specialization): Use htab_find instead of
	htab_find_slot with INSERT.

2011-09-26  Jason Merrill  <jason@redhat.com>

	PR c++/46105
	* typeck.c (structural_comptypes): Ignore cv-quals on typename scope.

	PR c++/50508
	* semantics.c (cxx_eval_logical_expression): Use tree_int_cst_equal
	rather than ==.

2011-09-23  Jason Merrill  <jason@redhat.com>

	Core 253 - allow const objects with no initializer or
	user-provided default constructor if the defaulted constructor
	initializes all the subobjects.
	PR c++/20039
	PR c++/42844
	* class.c (default_init_uninitialized_part): New.
	* cp-tree.h: Declare it.
	* decl.c (check_for_uninitialized_const_var): Use it.
	* init.c (perform_member_init): Likewise.
	(build_new_1): Likewise.
	* method.c (walk_field_subobs): Likewise.

2011-09-22  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/50491
	* semantics.c (potential_constant_expression_1): Handle USING_DECL.

2011-09-17  Jason Merrill  <jason@redhat.com>

	PR c++/50442
	Revert:
	PR c++/49267
	* call.c (compare_ics): rvaluedness_matches_p can differ
	based on the source type, not just target.

2011-09-16  Jason Merrill  <jason@redhat.com>

	PR c++/50424
	* tree.c (bot_manip): Set cp_function_chain->can_throw.
